name:                bencode
version:             0.1.0.0
synopsis:            Efficient bencode parsers and serialization
-- description:         
homepage:            https://github.com/nickspinale/bencode.git
license:             MIT
license-file:        LICENSE
author:              Nick Spinale
maintainer:          spinalen@carleton.edu
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Bencode
                       Data.Bencode.Lens
  -- other-modules:       
  -- other-extensions:
  build-depends:       attoparsec >= 0.10,
                       base >= 4.7,
                       bytestring >= 0.10.2,
                       containers,
                       profunctors

  hs-source-dirs:      src

  default-language:    Haskell2010
